# ChangeLog for media-gfx/gthumb
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.159 2013/03/29 10:03:01 pacho Exp $

*gthumb-3.2.0 (29 Mar 2013)

  29 Mar 2013; Pacho Ramos <pacho@gentoo.org>
  +files/gthumb-3.2.0-configure-option.patch, +gthumb-3.2.0.ebuild,
  metadata.xml:
  Version bump for Gnome 3.8

  05 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -files/gthumb-no-brasero3.patch, gthumb-2.14.4.ebuild, -gthumb-3.0.0.ebuild,
  gthumb-3.0.2.ebuild:
  Drop slideshow USE flag for gthumb-2 due to pending clutter-gtk-0.10 removal
  (bug #435164). Drop old. Update to EAPI5.

*gthumb-3.0.2 (25 Oct 2012)

  25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> -gthumb-2.14.3.ebuild,
  gthumb-2.14.4.ebuild, gthumb-3.0.0.ebuild, +gthumb-3.0.2.ebuild:
  Pin gstreamer dependencies to slot 0.10.

  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gthumb-2.14.4.ebuild:
  stable ppc, bug #427544

  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gthumb-2.14.4.ebuild:
  stable ppc64, bug #427544

  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gthumb-2.14.4.ebuild:
  Stable for amd64, wrt bug #427544

  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gthumb-2.14.4.ebuild:
  x86 stable wrt bug #427544

  21 Aug 2012; Christoph Junghans <ottxor@gentoo.org> gthumb-3.0.0.ebuild:
  added prefix keywords

*gthumb-2.14.4 (25 May 2012)

  25 May 2012; Pacho Ramos <pacho@gentoo.org> +gthumb-2.14.4.ebuild,
  -gthumb-2.14.0.ebuild, gthumb-3.0.0.ebuild:
  Version bump, drop old. Rekeyword on ppc/ppc64 as looks it makes repoman happy
  (and don't remember why were dropped).

  24 May 2012; Samuli Suominen <ssuominen@gentoo.org> gthumb-2.14.3.ebuild:
  ppc stable wrt #410611

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> gthumb-2.14.0.ebuild,
  gthumb-2.14.3.ebuild, gthumb-3.0.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig
