@@ -7,13 +7,13 @@ DIST gthumb-3.0.2.tar.xz 5803480 SHA256 eeccb23103b00e82941ba78023fa784228aab644
 DIST gthumb-3.2.0.tar.xz 3222004 SHA256 d48db6ab9d3ab052bdeb0e43f17afef90db1329111941d289e7be4b11ec0cbbf SHA512 7089110003d4355f09e82e2dec085d96c9ec6b3a555fcb31b3105d249a6c16e13f5564929fd267d1939d310c770873924586f036c9e45891acf22eafb0729eeb WHIRLPOOL 1eaa179015cc49c4c4da1eb00d5ce2e353e1f1e913ea17b997445590eeb6b9b7a2cf1effca09f78b6836093bb42aa23f286acc0849cd2609ff1f4040b49fe454
 EBUILD gthumb-2.14.4.ebuild 2206 SHA256 54a8a6d2539d18b4b04c0594426182c82064ebe902f1c8c74c4001125623f3b4 SHA512 9ea843f2ee2e12cd735b233dcb60b63e59a99aa30b778476220a062a3d9132406c3e5c7fdfd29bd47bcf6c36ab7e8f018bdb1215f764ddc2a9ab4ddb109166da WHIRLPOOL 3c63ed66fb5edd6f9616f87d8fca678dfacfc080152c23eeebe08d6c3b0d3a37c4b81b737d4cc749cbdc1aeb7683ed3aa316080d8561b7f31798023cbf613f7e
 EBUILD gthumb-3.0.2.ebuild 2227 SHA256 cfa38c5fc0c035e17cdf4e97d59ae2c210df8ee7755a33a638b957f1b193cf9f SHA512 11a7742d7cccfb99dc7a66376c83fa892e9ec224599ee2000d219c20300aeea118df22f0c3153b524479be0727879c71cd30d05b21519774473d12397388fb9a WHIRLPOOL ffd3806e9ad080eeadfd616cb14cea334e19914f9b1807b34ab884060dc3c3a53925323949d452fb009f1b1edda70178de0e8de534fba14e653e33e65858731c
-EBUILD gthumb-3.2.0.ebuild 2539 SHA256 6830faa9bd44e28b83b3162d04ee3882eeecddb1a367612e1e1d95251748ce7b SHA512 a58f1237efe2465d27b2dc6df2d3a191dc4de5352be6faf672bc01c8f8bb3addd49900ffd3d11912d20216d468431794183a6d2a5fbe45ef3db7c0956f68a4ab WHIRLPOOL fbdf51fdcf24d1001b579b5ae2bfd433c334ef098d953577ee0b35a8d2ba2ac658fcd814a4628d84f665906c503e1cf73556ed5b7f67058b76daee996f175ab6
-MISC ChangeLog 24430 SHA256 3dc2bf2e5781e28b744f04f1e2e177fba5e7b09e3080d6c4054a23a5aad1b446 SHA512 ec6e6ffd2fd9cedb2934248c55420e9854b898c1469ac01eb4fb4ef61502a046f6ec80d6e4661b9f015a41333769ede6747eebe04c898bf181b2685732094c13 WHIRLPOOL c4de64ab1a5dd843b80fbc298bbb16358a1cfe3929b52ff60da3e92d636edf1e3df556203b31c08147f49e9aec89559650790c5272a02007516dcb91c73896a5
+EBUILD gthumb-3.2.0.ebuild 2542 SHA256 640bb519a05c4904ab1fd8a9410c80932ffaf2c5204dbc36babd2ecdb3e94a81 SHA512 edfecad45aec5fb8958651f0f79d8595ba5321a5f2cc8716d1da3657a0a391c7543fefb8169a1750b858e67f3521163468be78bb06a1b56738232dcba279ddf9 WHIRLPOOL e30834edb4f5229ceaaefb44c40df06b728930df2807b37471b85ae6eb6eb7412745cc333031578b126e8b8a96f56d79d8fde2ab3e9367bb8ff6512fdede3872
+MISC ChangeLog 24565 SHA256 fab2e9d47f5fc373084e970ecf4d319ae2cc8a289b3d9708c9e5ee2aefa07bf6 SHA512 5aeaeabc4c1260db469b0ce0ad718f3b6cb27a6c51d9cb10a70937fcfad772870cd39d796d23ddadaa72187a1695da23fbd255797cccbc35b0bb40ce0130041e WHIRLPOOL b4614cf92f68c0e277925c114e6c71a13af3d02484f635b51cc10574599acf7d7f090a5bcca87aa2f1cf0c03d8ff2447d9e0d3601b7aa136d770890db6c4b061
 MISC metadata.xml 546 SHA256 da820e4bde7a6851acbc78e0d61a9fedd03d184ae4e0905c4d714d768fe372e9 SHA512 d58c9dfd995f1c17a886bbf133772b6ff61ebc7765da1ef2f98e5542677e398a16533206a38963de2d257da6ecc7a2a3969b82ab7185ce53d65e5a5cf0adfec9 WHIRLPOOL ab67a29b9d6aefec57f14f2fb8a3d1276fde8304346a4b3bdbbe557b9b9e5e988f141755f539e4639a6c55e9cfa4821c4efaf5e5e422529bcd1b5183726a4cd5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFVZtYACgkQCaWpQKGI+9R4+wCcC9+oKo/8Lprfss2P+tAWaHd5
-TqkAnRNIr8fyPvZ5PaK0VWBgXcthTpUX
-=aAz6
+iEYEAREIAAYFAlFYhmYACgkQCaWpQKGI+9QlnQCeIkk8NONmWQTOd0V5yhuHr3lH
+ynMAn3PE4o3tuj6k2Yp1fYV+hUHVuDHD
+=6gLz
 -----END PGP SIGNATURE-----
