@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gthumb
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.159 2013/03/29 10:03:01 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.160 2013/03/31 18:54:29 pacho Exp $
+
+  31 Mar 2013; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.0.ebuild:
+  Adapt to libsoup-2.42 dropping gnome USE and splitting (#463702)
 
 *gthumb-3.2.0 (29 Mar 2013)
 
